<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountAreaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/input_area_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/input_values_text"
            android:textSize="@dimen/font_size_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/length_area_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="@dimen/font_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_area_title" />

        <TextView
            android:id="@+id/length_area_label"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/length_text"
            android:textSize="@dimen/font_size_medium"
            app:layout_constraintBottom_toBottomOf="@+id/length_area_input"
            app:layout_constraintEnd_toStartOf="@+id/length_area_input"
            app:layout_constraintHorizontal_bias="0.604"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/length_area_input" />

        <TextView
            android:id="@+id/width_area_label"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/width_text"
            android:textSize="@dimen/font_size_medium"
            app:layout_constraintBottom_toBottomOf="@+id/width_area_input"
            app:layout_constraintEnd_toStartOf="@+id/width_area_input"
            app:layout_constraintHorizontal_bias="0.604"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/width_area_input" />

        <EditText
            android:id="@+id/width_area_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="@dimen/font_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/length_area_input" />

        <Button
            android:id="@+id/count_area_button"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/count_text"
            android:textSize="@dimen/font_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/width_area_input" />

        <TextView
            android:id="@+id/result_area_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Result"
            android:textSize="@dimen/font_size_very_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/count_area_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>